tests/NormalTests/paczka2/big_fuzzy/64069359.err
Error in line 2: dWB6pQ3GB S917 91,7
Error in line 1: LyRDgpK S144 99,7
Error in line 7: Qk2WEcm6mj S917 78,6
Error in line 25: dWB6pQ3GB A540 4W,5
Error in line 16: dWB6pQ3GB S144 96,6
Error in line 21: LyRDgpK A540 12,3
Error in line 36: LyRDgpK S144 32,8
Error in line 41: S144 S917 80,5
Error in line 56: Qk2WEcm6mj S$17 357,$
Error in line 57: S144 S586 86,9
Error in line 45: Qk2WEcm6mj S917 72,6
Error in line 64: dWB6pQ3GB A540 124,6
Error in line 82: szrOTJ A540 70,56
Error in line 84: szrOTJ A540 211,1
Error in line 89: LyRDgpK S586 70,9
Error in line 92: LyRDgpK A540 82,2
Error in line 97: dWB6pQ3GB S917 33,8
Error in line 99: dWB6pQ3GB S144 79,0
Error in line 111: oZm0NG S144 22,7
Error in line 112: oZm0NG S917 98,7
Error in line 114: oZm0NG S586 95,9
Error in line 135: Qk2WEcm6mj S917 46,04
Error in line 151: Qk2WEcm6mj S586 23,4
Error in line 162: dWB6pQ3GB S917 80,1
Error in line 170: oZm0NG S917 [3,4
Error in line 175: Qk2WEcm6mj S586 38,83
Error in line 174: oZm0NG S144 78,3
Error in line 167: Qk2WEcm6mj A540 85,8
Error in line 187: dWB6pQ3GB S917 -3,98
Error in line 184: Qk2WEcm6mj S586 158,9
Error in line 189: Qk2WEcm6mj A540 83,8
Error in line 192: Qk2WEcm6mj S917 60,9
Error in line 195: szrOTJ S144 4,8
Error in line 194: S144 S917 59,7
Error in line 199: szrOTJ S586 68,1
Error in line 200: S144 A540 48,9
Error in line 215: dWB6pQ3GB S586 44,5
Error in line 206: oZm0NG S586 63,5
Error in line 219: SpL2dzMN A5B0 93,0
Error in line 217: dWB6pQ3GB A540 69,2
Error in line 211: S144 S586 59,7
Error in line 223: Qk2WEcm6mj S917 54,4
Error in line 237: LyRDgpK S917 32,2
Error in line 244: LyRDgpK S586 52,0
